Developer/src/objects/Goods__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>カテゴリ</label>
        <picklist>
            <picklistValues>
                <fullName>01:ｳｪｯﾄﾃｨｯｼｭ（赤ちゃん用）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:ｴｱﾌﾚｯｼｭﾅｰ　ﾄｲﾚ用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:おむつ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:ｼｬﾝﾌﾟｰ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:ﾄﾘｰﾄﾒﾝﾄ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:液体用洗剤</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:柔軟剤</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v8:食器用洗剤</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:対面販売化粧品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:電動歯ﾌﾞﾗｼ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>チェックステータス</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>コメント</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImageUrl__c</fullName>
        <formula>IF ( PictureID__c=NULL , NULL , IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; PictureID__c, &quot;顔写真&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>写真</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PictureID__c</fullName>
        <label>画像ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PictureURL__c</fullName>
        <formula>IF ( PictureID__c=NULL , NULL , &quot;/servlet/servlet.FileDownload?file=&quot; &amp; PictureID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>画像URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseAmount__c</fullName>
        <label>購入個数</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PurchaseTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>購買履歴</label>
        <referenceTo>PurchaseTransaction__c</referenceTo>
        <relationshipLabel>販売商品</relationshipLabel>
        <relationshipName>PurchaseRelation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StandardPrice__c</fullName>
        <label>標準価格</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>販売開始年月日</label>
        <type>Date</type>
    </fields>
    <label>販売商品</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>販売商品名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>